# ColBERT

./: .env  .gitignore  LoTTE.md  MANIFEST.in  README.md  ROADMAP.md  conda_env.yml  conda_env_cpu.yml  conda_env_v2.yml  conda_environment.txt  demo-server.py  e2e_test.py  environment.yml  eval.py  eval_server.py  eval_server_async.py  faiss_indexing.sh  generate_poisson_trace.py  index.py  index.sh  index_and_evaluate_custom.py  index_and_evaluate_msmarco.py  indexing.sh  note.md  pyproject.toml  requirements.txt  retrieval.py  retrieval.sh  script.sh  server.proto  server.py  server_pb2.py  server_pb2_grpc.py  setup.py  trace_lam_0.2.txt  trace_lam_0.4.txt  trace_lam_0.5.txt  trace_lam_0.6.txt  trace_lam_0.8.txt  trace_lam_0.9.txt  (+3 more)
ColBERT.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
baleen/: engine.py  hop_searcher.py
bm25/: search.py
colbert/: __init__.py  incremental_indexer.py  index.py  index_faiss.py  index_updater.py  index_with_compression.py  indexer.py  parameters.py  rerank.py  reranker.py  retrieve.py  searcher.py  test.py  train.py  trainer.py
data/: 5k-eval.qrels.tsv  5k-eval.queries.tsv
docs/: index.html  indexer.html  intro.ipynb  intro2new.ipynb  intro2updated.ipynb  searcher.html  usage.html
doctrees/: environment.pickle  index_2.doctree
splade_server/: splade.proto  splade_pb2.py  splade_pb2_grpc.py  splade_server.py
src/: index.py  model.py  parameters.py  rerank.py  test.py  train.py  utils.py
traces/: trace_lam_0.025.txt  trace_lam_0.05.txt  trace_lam_0.3.txt  trace_lam_0.7.txt  trace_lam_0_1.txt  trace_lam_1.0.txt
(+140 files in other folders)
